@@ -1,2 +1,7 @@
-(import (rnrs)
-        (mosh jit))
+(import ;(except (srfi :1 lists) partition remove member fold-right find filter cons* assoc map for-each)
+        ;(only (srfi :1 lists) car+cdr)
+        (prefix (srfi :1 lists) srfi-1.)
+        (rnrs))
+
+(display "hi\n")
+(display srfi-1.car+cdr)
